<resources>
    <string name="app_name">Goodwill Wholesale</string>
    <string name="mid">5360</string>
    <string name="apikey">491e32078b6f3de89e8d1a50b7298518</string>
    <string name="shopdomain">ttcdoha.myshopify.com</string>
    <string name="mapdomain">ttcdoha.myshopify.com</string>
    <string name="mappattern">ttcdoha.myshopify.com</string>

    <string name="copyright">CopyRight &#169;</string>
    <string name="image">image</string>
    <string name="signin_drawer"><![CDATA[Sign In ]]></string>
    <string name="home">HOME</string>
    <string name="bag">MY CART</string>
    <string name="saved_items">MY WISHLIST</string>
    <string name="myaccount">MY DASHBOARD</string>
    <string name="categories">CATEGORIES</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="device_type">android</string>
    <string name="tryagain">Try Again !</string>
    <string name="drawertext">Save, shop and view orders</string>
    <string name="shop_in">Shop by categories</string>
    <string name="account">Your Account</string>
    <string name="extras">Extras </string>
    <string name="privacy">Privacy Policy</string>
    <string name="refund">Refund Policy</string>
    <string name="terms"><![CDATA[Terms & Conditions]]></string>
    <string name="sortby">Sort</string>
    <string name="filter">Filter</string>
    <string name="noproducts">No Products Found in Collections!</string>
    <string name="name_a_to_z">Name : A to Z</string>
    <string name="name_z_to_a">Name : Z to A</string>
    <string name="price_h_to_l">Price : HIGH TO LOW</string>
    <string name="price_l_to_h">Price : LOW TO HIGH</string>
    <string name="latest_collection">Latest Collection</string>
    <string name="best_selling">Best Selling</string>
    <string name="sortbyitems">Sort By</string>
    <string name="cart">Cart</string>
    <string name="wishlist">Wishlist</string>
    <string name="share">Share</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="productdetails">Products Details</string>
    <string name="Quantity">Quantity</string>
    <string name="plus">+</string>
    <string name="one">1</string>
    <string name="minus">-</string>
    <string name="productoptions">Select Product Options</string>
    <string name="shareproduct">Share Product</string>
    <string name="hey">Hey! checkout this new product</string>
    <string name="on">on</string>
    <string name="related">Similar Products</string>
    <string name="youwill">You will also like</string>
    <string name="hurryup">Everyone is loving shopping from these categories</string>
    <string name="selectvariant">Please select variant first</string>
    <string name="addedtocart">Product is added to cart.</string>
    <string name="emptycart">Your cart is empty</string>
    <string name="shopingcart">Shopping Cart</string>
    <string name="outofstock">Out Of Stock</string>
    <string name="delete">Remove item</string>
    <string name="subtotal">Sub Total</string>
    <string name="tax">Tax</string>
    <string name="grandtotal">Grand Total</string>
    <string name="ProceedTocheckout">Proceed To Checkout</string>
    <string name="apply_coupon_code">Apply Coupon Code</string>
    <string name="couponcode">coupon code</string>
    <string name="apply">Apply</string>
    <string name="discount">Discount</string>
    <string name="empty">Please provide some value first !</string>
    <string name="remove">Remove</string>
    <string name="nowish">No items in your wishlist.</string>
    <string name="checkout">Checkout</string>
    <string name="login">Login</string>
    <string name="socialaccounts">Sign in with your social account</string>
    <string name="OR">OR</string>
    <string name="signinwitheamil">Sign in with email</string>
    <string name="Username">Username</string>
    <string name="email_address">EMAIL ADDRESS</string>
    <string name="Password">Password</string>
    <string name="password">PASSWORD</string>
    <string name="Login">Sign IN</string>
    <string name="ForgotPassword">Forgotten password ?</string>
    <string name="donthave">Dont\'t have an account ?</string>
    <string name="signupwithustext">Sign up today.</string>
    <string name="signup">Sign up</string>
    <string name="CreateAccount">Create Account</string>
    <string name="submit">Submit</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="email">Email</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="invalidemail">invalid email</string>
    <string name="passwordnotmatch">password not match</string>
    <string name="successfullogin">Successfully login</string>
    <string name="logintype">Please select login type</string>
    <string name="Proceed_as_Guest">Proceed as guest</string>
    <string name="Proceed_as_User">Proceed as user</string>
    <string name="phone">Phone Number (Qatar) with country code +974</string>
    <string name="forgotpass">Forgot Password ?</string>
    <string name="hint">Please Enter your Email</string>
    <string name="sendemail">Send</string>
    <string name="pleasecheckyourmail">Please check your mail</string>
    <string name="SearchYourProducts">Search your products</string>
    <string name="noresult">No result found !</string>
    <string name="search">Search :</string>
    <string name="Logout">LOG OUT</string>
    <string name="myOrders">My Orders</string>
    <string name="MyAddress">Address Book</string>
    <string name="yourprofile">Your Profile</string>
    <string name="mywishlist">My Wishlist</string>
    <string name="updateprofile">Update Profile</string>
    <string name="profileupdated">Profile Successfully updated !</string>
    <string name="addnew">add new address</string>
    <string name="noaddress">No Address Found !</string>
    <string name="succesfullydelete">Address Successfully Deleted !</string>
    <string name="addaddress">Add A New Address</string>
    <string name="company">Company</string>
    <string name="address1">Address1</string>
    <string name="address2">Address2</string>
    <string name="city">City</string>
    <string name="Postal_ZipCode">Postal/Zip Code</string>
    <string name="state">Province</string>
    <string name="succesfullyadded">Successfully Added Address !</string>
    <string name="updateaddress">Update Address</string>
    <string name="succesfullyupdated">Address Successfully updated !</string>
    <string name="noorder">No Orders Found !</string>
    <string name="shipto">Ship To</string>
    <string name="totalitems">Total Items</string>
    <string name="Order">Order</string>
    <string name="Cost">Cost</string>
    <string name="placedontext">placed on</string>
    <string name="starthere">Start Here</string>
    <string name="viewmore">View more</string>
    <string name="Langauage">Langauage</string>
    <string name="lang">Select your langauage</string>
    <string name="recent">Recently Viewed</string>
    <string name="ordersuccessfulyplaced">Order Successfully Placed !</string>
    <string name="somethingleftinyourcart">You Have Left Something In Your Cart</string>
    <string name="heyuser">Hey !</string>
    <string name="invite">Invite Your Friends</string>
    <string name="add">Add</string>
    <string name="popular_categories">Popular Categories</string>
    <string name="rice">Rice &amp; Powha</string>
    <string name="sugar">Sugar &amp; Salts</string>
    <string name="pluse">Pulses</string>
    <string name="wholespice">Masala Whole</string>
    <string name="powderspice">Masala Powder</string>
    <string name="flour">Maida, Semolina \n &amp; Other Flours</string>
    <string name="oil">Oil</string>
    <string name="dry_fruits_nuts"><![CDATA[Dry fruits & nuts]]></string>
    <string name="cooking_ingredients">Cooking ingredients</string>
    <string name="chat">Chat With Us</string>
    <string name="crash_toast_text">Application Crashes !! Please Share Crash Report.</string>
    <string name="free_gift">Free Gift</string>
    <string name="choosedatetime"><![CDATA[Choose Date & Time]]></string>
    <string name="logintypes">Note</string>
    <string name="update_quantity">Update Quantity</string>
    <string name="update">Update</string>
    <string name="full_name">Full Name</string>
    <string name="company_name">Company Name</string>
    <string name="validnumber">Please enter valid Phone Number</string>
    <string-array name="slots">
        <item>9am to 12pm</item>
        <item>1pm to 5pm</item>
    </string-array>
</resources>
