<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright/**
  ~          * CedCommerce
  ~           *
  ~           * NOTICE OF LICENSE
  ~           *
  ~           * This source file is subject to the End User License Agreement (EULA)
  ~           * that is bundled with this package in the file LICENSE.txt.
  ~           * It is also available through the world-wide-web at this URL:
  ~           * http://cedcommerce.com/license-agreement.txt
  ~           *
  ~           * @category  Ced
  ~           * @package   MageNative
  ~           * @author    CedCommerce Core Team <connect@cedcommerce.com >
  ~           * @copyright Copyright CEDCOMMERCE (http://cedcommerce.com/)
  ~           * @license      http://cedcommerce.com/license-agreement.txt
  ~           */
  -->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollable"
    android:fillViewport="true"
    android:isScrollContainer="false"
    android:background="@color/white"
    >


    <RelativeLayout
        android:background="#58ffffff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/signuptext"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/socialaccounts"
                android:textColor="@color/AppTheme"
                android:visibility="gone"
                android:textSize="12sp" />

            <RelativeLayout
                android:id="@+id/sociallogins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/signuptext"
                android:visibility="gone"
                android:layout_centerHorizontal="true">
                <LinearLayout
                    android:id="@+id/MageNative_social_login_google"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:orientation="horizontal">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/category_image"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/images"
                        app:civ_border_color="@color/main_color_gray"
                        app:civ_border_width="1dp" />
                    <!--<com.google.android.gms.common.SignInButton
                        android:id="@+id/google_btn_sign_in"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="30dp"
                        android:layout_marginTop="30dp"
                        android:visibility="gone" />-->
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/MageNative_social_login_facebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/MageNative_social_login_google"
                    android:orientation="horizontal">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/face"
                        app:civ_border_color="@color/main_color_gray"
                        app:civ_border_width="1dp" />

                    <!--<com.facebook.login.widget.LoginButton
                        android:id="@+id/fb_login_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="30dp"
                        android:layout_marginTop="30dp"
                        android:visibility="gone" />-->
                </LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/MageNative_orsection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sociallogins"
                android:visibility="invisible"
                android:layout_marginTop="35dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="0.5dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:background="#D7D7D7" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight=".5"
                    android:gravity="center"
                    android:text="@string/OR"
                    android:textColor="#000"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="0.5dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="#D7D7D7" />
            </LinearLayout>

            <TextView
                android:id="@+id/signinwitheamil"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/MageNative_orsection"
                android:gravity="center"
                android:text="@string/signinwitheamil"
                android:textColor="@color/AppTheme"
                android:visibility="invisible"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/signinwitheamil"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Username"
                    android:textAllCaps="true"
                    android:textColor="#000"
                    android:textSize="15sp"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/MageNative_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:backgroundTint="@color/black"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    android:padding="5dp"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    tools:targetApi="lollipop" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/Password"
                    android:textAllCaps="true"
                    android:textColor="#000"
                    android:textSize="15sp"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/MageNative_usr_password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="25dp"
                    android:backgroundTint="@color/black"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="5dp"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    tools:targetApi="lollipop" />

                <Button
                    android:id="@+id/MageNative_Login"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/AppTheme"
                    android:text="@string/Login"
                    android:imeOptions="actionDone"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/MageNative_forgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:gravity="end"
                    android:text="@string/ForgotPassword"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="20dp"
                    android:alpha="0.5"
                    android:background="@color/main_color_gray_lt" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="25dp"
                    android:gravity="end"
                    android:text="@string/donthave"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/MageNative_signupwithustext"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="25dp"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:text="@string/signupwithustext"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>


        </RelativeLayout>

    </RelativeLayout>


</ScrollView>
